--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,5 +14,9 @@
         <item
             android:id="@+id/nav_compter"
             android:title="コンピューター"/>
+
+        <item
+            android:id="@+id/nav_favorite"
+            android:title="お気に入り"/>
     </group>
 </menu>
