--- a/app/src/main/res/layout/activity_question_detail.xml
+++ b/app/src/main/res/layout/activity_question_detail.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -20,18 +21,28 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/plus" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/favoriteButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/listView"
         android:background="@drawable/custom_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:text="お気に入り"
-        android:textColor="@color/colorButtonText" />
+        android:textColor="@color/colorButtonText"
+        app:srcCompat="@android:drawable/star_big_off"
+        android:layout_marginBottom="15dp"
+        android:layout_marginStart="16dp"/>
+
+
+
+
+
 
 </RelativeLayout>
